commit change