@@ -8,28 +8,28 @@ import org.mapstruct.factory.Mappers;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
-import java.util.Date;
 import java.util.HashSet;
-import java.util.Set;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-class MapperTest {
-    private AccountHistoryMapper mapper = Mappers.getMapper(AccountHistoryMapper.class);
+ class MapperTest {
+    private final AccountHistoryMapper mapper = Mappers.getMapper(AccountHistoryMapper.class);
 
 
     @Test
-    void mapperTest(){
+    void mapperAccountToAccountHistoryTest(){
         assertNotNull(mapper);
         Transaction txSource = Transaction.builder().operation(Operation.DEPOSIT)
                          .amount(200D)
                          .dateOperation(LocalDateTime.now())
                          .operation(Operation.DEPOSIT).build();
         Account account = Account.builder().balance(200D)
-                .transactions(new HashSet<>(Arrays.asList(txSource)))
+                .transactions(new HashSet<>(List.of(txSource)))
                 .build();
 
-        AccountHistory history = mapper.entityToApi(account);
+        AccountHistory history = mapper.accountToAccountHistory(account);
         TransactionDto transactionDto = history.getListTransaction().stream().findFirst().get();
 
         assertEquals(history.getListTransaction().size(), account.getTransactions().size());
@@ -39,6 +39,33 @@ class MapperTest {
         assertEquals(transactionDto.getDateOperation(), txSource.getDateOperation());
     }
 
+
+     @Test
+     void mapperAccountToResultOperationTest(){
+         assertNotNull(mapper);
+         Transaction txSourceDeposit = Transaction.builder()
+                 .transIdent(1L)
+                 .operation(Operation.DEPOSIT)
+                 .amount(200D)
+                 .dateOperation(LocalDateTime.now())
+                 .operation(Operation.DEPOSIT).build();
+
+         Transaction txSourceWithdrawal = Transaction.builder().operation(Operation.WITHDRAWAL)
+                 .transIdent(2L)
+                 .amount(400D)
+                 .dateOperation(LocalDateTime.now())
+                 .operation(Operation.WITHDRAWAL).build();
+
+         Account account = Account.builder()
+                 .balance(200D)
+                 .transactions(new HashSet<>(Arrays.asList(txSourceWithdrawal, txSourceDeposit)))
+                 .build();
+
+         ResultOperation operation = mapper.accountToResultOperation(account);
+         assertEquals(operation.getBalance(), account.getBalance());
+         assertEquals(400D, operation.getTransaction().getAmount());
+         assertEquals(Operation.WITHDRAWAL, operation.getTransaction().getOperation());
+     }
 
 
 }
