@@ -9,19 +9,17 @@ import com.kata.exception.NoOperationFoundException;
 import com.kata.exception.WithdrawalOperationException;
 import com.kata.repository.AccountRepositoy;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.junit.jupiter.api.Test;
-import org.springframework.test.annotation.Repeat;
 
 import java.util.*;
 
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.when;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.when;
 
 
 @ExtendWith(MockitoExtension.class)
@@ -41,7 +39,7 @@ class AccountBankServiceTest {
 
     @BeforeEach
     void setUp(){
-        account = Account.builder().account_ident(CUSTOMER_IDENT).balance(0D).transactions(new HashSet<>(0)).build();
+        account = Account.builder().accountIdent(CUSTOMER_IDENT).balance(0D).transactions(new HashSet<>(0)).build();
        //  tx = Transaction.builder().amount(0D).build();
 
     }
@@ -58,7 +56,7 @@ class AccountBankServiceTest {
     void whenDepositeLessThanMinValueThenThrows(){
         var minDeposit = 0D;
         when(accountRepositoy.findAccountByCustomer(CUSTOMER_IDENT)).thenReturn(Optional.ofNullable(account));
-        assertThatThrownBy(() -> accountBankService.operation(Operation.DEPOSIT, minDeposit,  account.getAccount_ident())  )
+        assertThatThrownBy(() -> accountBankService.operation(Operation.DEPOSIT, minDeposit,  1L)  )
                 .isInstanceOf(DepositeOperationException.class)
                 .hasMessage(DepositeOperationException.OPERATION_REFESUD);
     }
@@ -70,7 +68,7 @@ class AccountBankServiceTest {
         var expectedBalance = actualBalance + amount;
         account.setBalance(actualBalance);
         when(accountRepositoy.save(account)).thenReturn(account);
-        assertThat(accountBankService.depositeAcount(account, amount).getBalance()).isEqualTo(expectedBalance);
+        assertThat(accountBankService.appliedOperationAccount(account, amount, Operation.DEPOSIT).getBalance()).isEqualTo(expectedBalance);
     }
 
     @Test
@@ -81,7 +79,7 @@ class AccountBankServiceTest {
         account.setBalance(actualBalance);
         when(accountRepositoy.findAccountByCustomer(CUSTOMER_IDENT)).thenReturn(Optional.ofNullable(account));
         when(accountRepositoy.save(account)).thenReturn(account);
-        assertThat(accountBankService.operation(Operation.DEPOSIT ,amount, account.getAccount_ident()).getBalance()).isEqualTo(expectedBalance);
+        assertThat(accountBankService.operation(Operation.DEPOSIT ,amount, account.getAccountIdent()).getBalance()).isEqualTo(expectedBalance);
     }
 
 
@@ -92,7 +90,7 @@ class AccountBankServiceTest {
         var amount = 50D;
         account.setBalance(balance);
         when(accountRepositoy.findAccountByCustomer(CUSTOMER_IDENT)).thenReturn(Optional.of(account));
-        assertThatThrownBy(() -> accountBankService.operation(Operation.WITHDRAWAL, amount,  account.getAccount_ident())  )
+        assertThatThrownBy(() -> accountBankService.operation(Operation.WITHDRAWAL, amount,  1L)  )
                 .isInstanceOf(WithdrawalOperationException.class)
                 .hasMessage(WithdrawalOperationException.INSUFFICIENT_CREDIT);
     }
@@ -105,23 +103,23 @@ class AccountBankServiceTest {
         var expectedBalance = actualBalance - amount;
         account.setBalance(actualBalance);
         when(accountRepositoy.save(account)).thenReturn(account);
-        assertThat(accountBankService.withdrawAcount(account, amount).getBalance()).isEqualTo(expectedBalance);
+        assertThat(accountBankService.appliedOperationAccount(account, amount, Operation.WITHDRAWAL).getBalance()).isEqualTo(expectedBalance);
     }
 
     @Test
     void operationWithOperationTypeWITHDRAWAL(){
         var actualBalance = 200D;
-        var amount = new Random().doubles(0,199).findAny().getAsDouble();
+        var amount = 100D;
         var expectedBalance = actualBalance - amount;
         account.setBalance(actualBalance);
         when(accountRepositoy.findAccountByCustomer(CUSTOMER_IDENT)).thenReturn(Optional.ofNullable(account));
         when(accountRepositoy.save(account)).thenReturn(account);
-        assertThat(accountBankService.operation(Operation.WITHDRAWAL ,amount, account.getAccount_ident()).getBalance()).isEqualTo(expectedBalance);
+        assertThat(accountBankService.operation(Operation.WITHDRAWAL ,amount, account.getAccountIdent()).getBalance()).isEqualTo(expectedBalance);
     }
 
     @Test
     void whenNoOperationFoundThenThrows(){
-        when(accountRepositoy.findAccount(ACCOUNT_IDENT)).thenReturn(Optional.of(account));
+        when(accountRepositoy.findAccountAndListTransaction(ACCOUNT_IDENT)).thenReturn(Optional.of(account));
         assertThatThrownBy(() -> accountBankService.listTransactionAccount(ACCOUNT_IDENT)  )
                 .isInstanceOf(NoOperationFoundException.class)
                 .hasMessage(NoOperationFoundException.NO_OPERATION_FOUND);
@@ -129,7 +127,7 @@ class AccountBankServiceTest {
 
     @Test
     void whenNoAccountFondThenThrows(){
-        when(accountRepositoy.findAccount(ACCOUNT_IDENT)).thenReturn(Optional.empty());
+        when(accountRepositoy.findAccountAndListTransaction(ACCOUNT_IDENT)).thenReturn(Optional.empty());
         assertThatThrownBy(() -> accountBankService.listTransactionAccount(ACCOUNT_IDENT)  )
                 .isInstanceOf(AccountNotFoundException.class)
                 .hasMessage(AccountNotFoundException.ACCOUNT_NOT_FOUND);
@@ -138,9 +136,9 @@ class AccountBankServiceTest {
     @Test
     void listOfTransactionAccount() {
         Transaction tx = Transaction.builder().amount(0D).build();
-        Set<Transaction> listTx = new HashSet<>(Arrays.asList(tx));
+        Set<Transaction> listTx = new HashSet<>(List.of(tx));
         account.setTransactions(listTx);
-        when(accountRepositoy.findAccount(ACCOUNT_IDENT)).thenReturn(Optional.of(account));
+        when(accountRepositoy.findAccountAndListTransaction(ACCOUNT_IDENT)).thenReturn(Optional.of(account));
         assertThat(accountBankService.listTransactionAccount(ACCOUNT_IDENT).getListTransaction()).hasSize(1);
     }
 
